--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,12 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-.navbar{
+/*.navbar{
     background-color: #ffff;
     display: flex;
-    /*border: 2px solid black;*/
+    /*border: 2px solid black;
     width: 100%;
-}
+}*/
 
 .nav_container{
     display: flex;
@@ -21,6 +21,7 @@ body{
     width: 100%;
     align-items: center;
     padding-left: 40px;
+    background-color: #ffff;
     
 }
 
@@ -223,15 +224,15 @@ body{
     justify-content: center;
     margin-top: 20px;
     background-color: #ffffff;
+    width: 100%;
 }
 
 .about_content{
     /*border: 2px solid red;*/
-    width: 70%;
+    max-width: 100%;
     text-align: center;
     justify-items: center;
-    flex: 1;
-    height: 220px;
+    padding: 20px;
 }
 
 .about_content .top{
@@ -255,6 +256,7 @@ body{
     border-radius: 8px;
     transition: all 0.3s ease;
     /*box-shadow: 0 10px 30px grey;*/
+    display: block;
 }
 
 .about_content a:hover{
@@ -286,7 +288,7 @@ body{
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     cursor: pointer;
-    height: 540px;
+    height: 500px;
     flex-basis: 350px;
     flex-shrink: 1;
 }
@@ -383,18 +385,18 @@ body{
 
 .services_section{
     /*border: 2px solid black;*/
-    width: 100%;
+    max-width: 100%;
     display: flex;
     padding: 20px;
-    justify-content: space-evenly;
-    flex: 1;
+    justify-content: center;
     gap: 20px;
     background-color: #f3f3f3;
     padding-top: 50px;
+    flex-wrap: wrap;
 }
 
 .services_container{
-    /*border: 2px solid rgb(187, 32, 32);*/
+    border: 2px solid rgb(43, 50, 115);
     height: 280px;
     flex-basis: auto;
     width: 300px;
@@ -403,6 +405,7 @@ body{
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
     background-color: #ffffff;
+    flex-shrink: 1;
 }
 
 .service_icon img{
