--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body{
     align-items: center;
     padding-left: 40px;
     background-color: #ffff;
+    position: relative;
+    justify-content: space-between;
     
 }
 
@@ -29,13 +31,8 @@ body{
     list-style: none;
     display: flex;
     color: black;
-    /*border: 2px solid black;*/
-    margin-left: auto;
-    width: 50%;
-    justify-content: space-evenly;
-    height: 40px;
-    align-items: center;
-    
+    gap: 32px;
+    /*border: 2px solid black;*/ 
 }
 
 .navlinks a{
@@ -79,6 +76,84 @@ body{
 #nav_cta a:hover{
     background-color: rgb(255, 255, 255);
     color: #000000;
+}
+
+.hamburger{
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 4px;
+}
+
+.hamburger span{
+    width: 25px;
+    height: 3px;
+    background-color: #000000;
+    transition: all 0.3s;
+}
+
+/*Navbar to ham menu */
+@media (max-width: 600px) {
+
+    #nav_cta a{
+        text-decoration: none;
+        color: black;
+        font-weight: normal;
+        position: relative;
+        cursor: pointer;
+        transition: font-weight 0.3s ease, color 0.3s ease;
+        background-color: #ffffff;
+        padding: 10px;
+        display: block;
+        border-radius: 8px;
+    }
+
+    .hamburger{
+        display: flex;
+    }
+
+    .navlinks{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background-color: #0a2e20;
+        flex-direction: column;
+        width: 70%;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease;
+        gap: 0;
+        z-index: 1000;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+
+    .navlinks.active{
+        max-height: 350px;
+    }
+
+    .navlinks li{
+        padding: 10px;
+        border-top: 1px solid #444;
+    }
+
+    .hamburger.active span:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .hamburger.active span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active span:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px);
+    }
+
+    .navlinks a{
+        color: white;
+    }
+
+
 }
 
 /* Hero Section */
