--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /*.navbar{
@@ -111,6 +111,7 @@ body{
 
     .hamburger{
         display: flex;
+        margin: 12px;
     }
 
     .navlinks{
@@ -390,10 +391,11 @@ body{
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     cursor: pointer;
-    height: 500px;
+    height: 450px;
     flex-basis: 350px;
     flex-shrink: 1;
 }
+
 
 .project_card:hover{
     transform: scale(1.05);
