--- a/styles.css
+++ b/styles.css
@@ -300,7 +300,7 @@ body{
 @media(max-width: 600px){
 
     .hero{
-        height: 65vh;
+        height: 70vh;
     }
 
     .hero-content{
@@ -589,12 +589,21 @@ body{
 }
 
 .copyright{
-    width: 100%;
-    height: 40px;
+    max-width: 100%;
+    min-height: 40px;
     justify-content: center;
     display: flex;
     align-items: center;
     background-color: #5d6268;
+}
+
+@media(max-width:600px){
+    .copyright{
+        display: flex;
+        flex-direction: column;
+        min-height: auto;
+        text-align: center;
+    }
 }
 
 .Clients_Container{
