--- a/pages/about.css
+++ b/pages/about.css
@@ -173,6 +173,12 @@ body{
     backdrop-filter: blur(2px);
 }
 
+@media(max-width: 600px){
+    .text_div{
+        font-size: 30px;
+    }
+}
+
 .section-container{
     border-top: 1px solid grey;
     border-radius: 10px;
@@ -180,11 +186,14 @@ body{
     padding: 40px;
     display: flex;
     justify-content: space-evenly;
+    background-color: white;
+    /*border: 3px solid orange;*/
 }
 
 .about-div{
     flex-basis: 800px;
     padding: 10px;
+    /*border: 2px solid red;*/
 }
 
 .right{
@@ -192,6 +201,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    /*border: 2px solid black;*/
 }
 
 .row1{
@@ -208,6 +218,23 @@ body{
     padding: 10px 20px;
 }
 
+@media(max-width: 600px){
+
+    .section-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-div{
+        flex-basis: 500px;
+    }
+
+    .right{
+        flex-basis: 600px;
+        justify-content: space-around;
+    }
+}
+
 .section2-container{
     min-height: 25vh;
     background-color: #06021e;
@@ -221,6 +248,20 @@ body{
 
 .section2-container span{
     font-size: 50px;
+}
+
+@media(max-width: 600px){
+    .section2-container span{
+        font-size: 25px;
+    }
+
+    .section2-container p{
+        font-size: 12px;
+    }
+
+    .section2-container{
+        min-height: 15vh;
+    }
 }
 
 .midsec{
@@ -247,26 +288,47 @@ body{
 }
 
 .footer_container{
-    width: 100%;
-    height: 400px;
+    max-width: 100%;
+    min-height: 400px;
     background-color: #33383e;
     padding: 50px;
+    /*border: 2px solid red;*/
 }
 
 .footer_contents{
     /*border: 2px solid ;*/
     display: flex;
-    height: 250px;
+    min-height: 250px;
     color: #929dab;
     justify-content: space-evenly;
     margin-top: 10px;
+    flex-wrap: wrap;
+}
+
+@media(max-width: 600px){
+    address iframe{
+        max-width: 270px;
+    }
+    .footer_contents div{
+        text-align: center;
+    }
 }
 
 .copyright{
-    width: 100%;
-    height: 40px;
+    max-width: 100%;
+    min-height: 40px;
     justify-content: center;
     display: flex;
     align-items: center;
     background-color: #5d6268;
+}
+
+@media(max-width:600px){
+    .copyright{
+        display: flex;
+        flex-direction: column;
+        min-height: auto;
+        text-align: center;
+        flex-wrap: wrap;
+    }
 }
