--- a/styles.css
+++ b/styles.css
@@ -332,7 +332,7 @@ body{
 
 .about_content{
     /*border: 2px solid red;*/
-    max-width: 100%;
+    flex-basis: 800px;
     text-align: center;
     justify-items: center;
     padding: 20px;
@@ -371,8 +371,7 @@ body{
 /*Project Tiles*/
 
 .card_container{
-    /*border: 2px solid blue;*/
-    width: 100%;
+    width: 80%;
     /*Removed height made it responsive*/
     margin-top: 0px;
     padding: 40px;
@@ -380,6 +379,12 @@ body{
     justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
+}
+
+#cards{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #f3f3f3;
 }
 
@@ -700,4 +705,10 @@ body{
     .Clients_Container{
         height: 130px;
     }
+}
+
+#meta-item{
+    background-color: rgb(220, 252, 241);
+    padding: 0 8px;
+    border-radius: 20px;
 }
