--- a/pages/Quote.css
+++ b/pages/Quote.css
@@ -12,7 +12,7 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.service-form-container {
+.quote-form-container {
   max-width: 480px;
   margin: 40px auto;
   background: #fff;
@@ -22,12 +22,12 @@ body{
   font-family: Arial, sans-serif;
 }
 
-.service-form-container h2 {
+.quote-form-container h2 {
   text-align: center;
   margin-bottom: 10px;
 }
 
-.service-form-container p {
+.quote-form-container p {
   text-align: center;
   color: #666;
   font-size: 14px;
@@ -41,7 +41,7 @@ label {
   color: #444;
 }
 
-input, select, textarea {
+input, select {
   width: 100%;
   padding: 12px;
   margin-top: 6px;
@@ -153,6 +153,7 @@ input, select, textarea {
     transition: all 0.3s;
 }
 
+/*Navbar to ham menu */
 @media (max-width: 600px) {
 
     #nav_cta a{
