--- a/pages/about.css
+++ b/pages/about.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: 'Kedebideri', sans-serif;
 }
 
 .nav_container{
@@ -124,6 +124,7 @@ body{
         z-index: 1000;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         margin-right: 0 !important;
+        gap: 20px !important ;
     }
 
     .navlinks.active{
