--- a/styles.css
+++ b/styles.css
@@ -727,3 +727,10 @@ body{
     border-bottom: 3px solid #32c985;
     color: #4e4e4e;
 }
+
+.wrapper{
+    height: 110vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    perspective: 10px;
+}
